[package]
name = "logsplitter2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0.30"
json = "0.12.4"
kanal = "0.1.0-pre8"
rayon = "1.10.0"
tokio =  { version = "1.37.0", features = ["time"] }
tokio-uring = "0.4.0"
utf8-decode = "1.0.1"

[profile.release]
opt-level = 3
lto = true
